# TRTorch

./: CMakeLists.txt  README.md  demo.py
core/conversion/: CMakeLists.txt
core/lowering/: CMakeLists.txt  lowering.cpp  register_trt_placeholder_ops.cpp
core/runtime/: CMakeLists.txt
core/util/: CMakeLists.txt
cpp/api/: CMakeLists.txt
docs/_notebooks/: Resnet50-example.html  lenet-getting-started.html  ssd-object-detection-demo.html
py/: setup.py
